[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
env_logger = "0.9"
log = "0.4"
anyhow = "1.0.63"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
image = "0.24.3"
winit = "0.27.2"
wgpu = "0.13.1"
cgmath = "0.18.0"
physx = "0.13.0"